--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,14 +5,16 @@
         <li class="list-group-item">
           <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
         </li>
+        <li class="list-group-item">
+          <%= link_to 'Twitter',"https://twitter.com/bomberstech" , class: "nav-link #{yield(:blog_active)}"%>
+        </li>
 
         <li class="list-group-item">
+          <%= link_to 'facebook',"https://www.facebook.com/BombersTech-253105425160044" , class: "nav-link #{yield(:blog_active)}"%>
+        </li>
 
 
-        <li><a href="https://twitter.com/bomberstech" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/BombersTech-253105425160044/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         <!-- <li class="list-group-item">
-
           <%= link_to 'About', about_path, class: "nav-link #{yield(:about_active)}" %>
         </li>
         <li class="list-group-item">
@@ -44,8 +46,14 @@
         <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
       </li>
 
-       <li><a href="https://twitter.com/bomberstech" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="https://www.facebook.com/BombersTech-253105425160044/" class="icon fa-facebook"><span class="label">Facebook</span></a></li> 
+      <li class="nav-item">
+        <%= link_to 'Twitter',"https://twitter.com/bomberstech" , class: "nav-link #{yield(:blog_active)}"%>
+      </li>
+
+      <li class="nav-item">
+        <%= link_to 'Facebook',"https://www.facebook.com/BombersTech-253105425160044" , class: "nav-link #{yield(:blog_active)}"%>
+      </li>
+
       <!-- <li class="nav-item">
         <%= link_to '', about_path, class: "nav-link #{yield(:about_active)}" %>
       </li> -->
