se carga comparte:

--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <%=yield(:page_title)%> |BOMBERSTECH</title>
+    <title> <%=yield(:page_title)%> BOMBERSTECH</title>
 
     <%= csrf_meta_tags %>
 
