--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -19,6 +19,7 @@
 
      <p><%= @post.display_day_published%></p>
      <%=@post.body.html_safe %>
+     <p>Compartelo:</p>
      <div class="addthis_inline_share_toolbox_3b4g"></div>
 
 
@@ -31,6 +32,7 @@
      <!-- <a href="https://twitter.com/bomberstech" target="_blank"><img src="https://lh5.googleusercontent.com/-xZVxH6CsUaQ/UefWwgi8o3I/AAAAAAAAEdk/reo5XS6z8-8/s32-no/twitter.png"></a>
      <a href="https://www.facebook.com/BombersTech-253105425160044/" target="_blank"><img src="https://lh3.googleusercontent.com/-H8xMuAxM-bE/UefWwJr2vwI/AAAAAAAAEdY/N5I41q19KMk/s32-no/facebook.png"></a> -->
      <!-- <iframe src="http://www.facebook.com/plugins/like.php?href=http://tuweb.com/&layout=button_count&show_faces=true&width=450&action=like&font=trebuchet+ms&colorscheme=light&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:21px;" allowTransparency="true"></iframe> -->
+
      <div id="disqus_thread"></div>
      <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58cfdee1210231f2"></script> -->
 
