--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -7,7 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="//cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <!-- <script src="//cloud.tinymce.com/stable/tinymce.min.js"></script> -->
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=your_API_key"></script>
 
   </head>
 
