se agregan Tags

--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="iconco.ico">
     <title> <%=yield(:page_title)%> BOMBERSTECH</title>
+
 
     <%= csrf_meta_tags %>
 
