--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> <%=yield(:page_title)%> |BOMBERSTECH</title>
-
+    <link rel="stylesheet" href="../assetes/images/iconco.ico">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
