--- a/app/views/blog/posts/_post.html.erb
+++ b/app/views/blog/posts/_post.html.erb
@@ -6,7 +6,7 @@
     <div class="card-block">
 
       <h4 class="card-title"><%= link_to post.title, post %></h4>
-      <!-- <p><%= raw post.tags.map { |t| link_to t.name, posts_path(tag: t.name) }.join(', ')%></p> -->
+      <p><%= raw post.tags.map { |t| link_to t.name, posts_path(tag: t.name) }.join(', ')%></p>
       <!-- <p class='tags'><%= raw post.tags.map { |t| link_to t.name, posts_path(tag: t.name) }.join(', ') %></p> -->
       <p class="published-date"><%= post.display_day_published %></p>
       <%= link_to post do %>
