--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -61,13 +61,13 @@
       </li> -->
       <i class="fa fa-facebook" aria-hidden="true"></i>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <%= link_to 'Twitter',"https://twitter.com/bomberstech" , class: "nav-link #{yield(:blog_active)}"%>
       </li>
 
       <li class="nav-item">
         <%= link_to 'Facebook',"https://www.facebook.com/BombersTech-253105425160044" , class: "nav-link #{yield(:blog_active)}"%>
-      </li>
+      </li> -->
       <li class="nav-item">
         <%= link_to 'Tecnologia', posts_path(tag:'Tecnologia'), class: "nav-link #{yield(:blog_active)}" %>
       </li>
