--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "colors";
 @import "navbar";
 @import "posts";
+@import "footer";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
