se agrega scalable

--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:page_title, 'All Posts') %>
 <% provide(:blog_active, 'active') %>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 
 
 
