--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:page_title, @post.title) %>
 <% provide(:blog_active, 'active') %>
-<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
 
 <meta property="og:locale" content="es_ES">
 <meta property="og:type" content="article">
