se carga faccebook del footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,12 @@
   <a class='navbar-brand' href='/'>
     Bombers<span class='light'>Tech</span>
   </a>
-  
+  <a class="navbar-brand" href="https://www.facebook.com/BombersTech/">
+   <img src="http://2.bp.blogspot.com/-q_Tm1PpPfHo/UiXnJo5l-VI/AAAAAAAABzU/MKdrVYZjF0c/s1600/face.png" width="30" height="30" alt="">
+ </a>
+ <a class="navbar-brand" href="https://twitter.com/bomberstech">
+  <img src="http://3.bp.blogspot.com/-wlwaJJG-eOY/UiXnHS2jLsI/AAAAAAAAByQ/I2tLyZDLNL4/s1600/Twitter+NEW.png" width="30" height="30" alt="">
+</a>
 </div>
 
 </nav>
