--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,10 +2,10 @@
   <div class="collapse-bg p-a-1">
     <div class='card'>
       <ul class="list-group list-group-flush">
-        <!-- <li class="list-group-item">
-          <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
-        </li>
         <li class="list-group-item">
+          <%= link_to 'Home', root_path, class: "nav-link #{yield(:blog_active)}" %>
+        </li>
+        <!-- <li class="list-group-item">
           <%= link_to 'Twitter',"https://twitter.com/bomberstech" , class: "nav-link #{yield(:blog_active)}"%>
         </li>
 
@@ -56,9 +56,9 @@
       &#9776;
     </button>
     <ul class="nav navbar-nav pull-sm-right hidden-xs-down">
-      <!-- <li class="nav-item">
-        <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
-      </li> -->
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class: "nav-link #{yield(:blog_active)}" %>
+      </li>
       <i class="fa fa-facebook" aria-hidden="true"></i>
 
       <!-- <li class="nav-item">
