se agrega width facebook 100

--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -29,7 +29,10 @@
      <p><%= @post.display_day_published%></p>
      <%=@post.body.html_safe %>
 
-     <div class=" col-md-10 col-lg-8 text-xs-center fb-like " data-href="https://www.facebook.com/BombersTech/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+     <div class="col-md-1 col-lg-2">
+       <div class="  fb-like " data-href="https://www.facebook.com/BombersTech/" data-width="100" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
+     </div>
      <a href="https://twitter.com/BombersTech" class="twitter-follow-button" data-show-count="false">Follow @BombersTech</a>
      <p>Compartelo:</p>
      <div class="addthis_inline_share_toolbox_3b4g"></div>
