--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -58,6 +58,13 @@
 
    </div>
  </div>
+ <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7990373783166354",
+    enable_page_level_ads: true
+  });
+</script>
  <script>
 
  /**
